src/objects/Contract_Request__c.object
<CustomObject>
    <description>For VHD ticket #256129. Requested by Andrew Morales.</description>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments / Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>User would select an existing Account in SFDC. If no Account available they could elect &apos;Not Found&quot; and it would assign to a &quot;dummy&quot; account we set up</description>
        <inlineHelpText>If Company Name not found then please enter Other.</inlineHelpText>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Requests</relationshipLabel>
        <relationshipName>Contract_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Owner_Email__c</fullName>
        <description>Used internally. Value will be set automatically.</description>
        <inlineHelpText>Value will be set automatically on selecting Contract Owner</inlineHelpText>
        <label>Contract Owner&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_Owner_Name__c</fullName>
        <formula>IF(Contract_Owner__c == null, &apos;&apos;, Contract_Owner__r.FirstName + &apos; &apos; + Contract_Owner__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Owner&apos;s Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select Contract Owner based on above key contact information.</inlineHelpText>
        <label>Contract Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to Contract record created from this request.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Requests</relationshipLabel>
        <relationshipName>Contract_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Required__c</fullName>
        <label>Date Required</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Auto Populate submission date</description>
        <label>Date Submitted</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High_Urgency_Reason__c</fullName>
        <description>If Urgency is high then user must provide reason</description>
        <label>High Urgency Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Email__c</fullName>
        <label>Partner Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Name__c</fullName>
        <description>First and Last name</description>
        <label>Partner Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Phone__c</fullName>
        <label>Partner Contact  Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reason_for_Rejection__c</fullName>
        <inlineHelpText>Reason for rejecting the new contract request.</inlineHelpText>
        <label>Reason for Rejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Finance (royalty, payments, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOM clean up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Internal Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <description>Used by Email Alert. No need to display on page layout.</description>
        <label>Requester&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Requester</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>Contract Requests</relationshipLabel>
        <relationshipName>Contract_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>ATAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Companion Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_Software_Requested__c</fullName>
        <description>User will enter no more than a few sentences, but would need to enter (something)</description>
        <inlineHelpText>Enter no more than a few sentences.</inlineHelpText>
        <label>Software/Work Requested</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Which_Device__c</fullName>
        <inlineHelpText>Enter no more than a few sentences.</inlineHelpText>
        <label>Which Device(s)</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Contract Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Partner_Contact_Name__c</columns>
        <columns>What_Software_Requested__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Date_Required__c</columns>
        <columns>Urgency__c</columns>
        <columns>Which_Device__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Processed</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Contract__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Partner_Contact_Name__c</columns>
        <columns>What_Software_Requested__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Date_Required__c</columns>
        <columns>Urgency__c</columns>
        <columns>Which_Device__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Processed</value>
        </filters>
        <label>Processed</label>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Partner_Contact_Name__c</columns>
        <columns>What_Software_Requested__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Date_Required__c</columns>
        <columns>Urgency__c</columns>
        <columns>Which_Device__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
    </listViews>
    <listViews>
        <fullName>Submitted</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Contract__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Partner_Contact_Name__c</columns>
        <columns>What_Software_Requested__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Date_Required__c</columns>
        <columns>Urgency__c</columns>
        <columns>Which_Device__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Submitted</label>
    </listViews>
    <nameField>
        <displayFormat>Req{000000}</displayFormat>
        <label>Contract Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>